fix overflow auto

--- a/src/style.css
+++ b/src/style.css
@@ -93,6 +93,8 @@ body {
   top: 0;
   left:  calc(var(--width-type) + var(--width-tool));
   padding-top: var(--standard-distance);
+
+  overflow: auto;
 }
 
 .list_button {
